--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,16 @@
     {% include header.html %}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+      <div class="container wrapper">
         {{ content }}
       </div>
     </main>
 
     {% include footer.html %}
+
+    <script src="{{'/node_modules/jquery/dist/jquery.min.js' | prepend: site.baseurl}}"></script>
+    <script src="{{'/node_modules/popper.js/dist/umd/popper.min.js' | prepend: site.baseurl}}"></script>
+    <script src="{{'/node_modules/bootstrap/dist/js/bootstrap.min.js' | prepend: site.baseurl}}"></script>
 
   </body>
 
