--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,6 +1,13 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
+@import "variables";
+@import "bootstrap/scss/bootstrap";
+
+// .content {
+//   font-size: $custom-font-size;
+// }
+
 
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $base-font-size:   16px !default;
